--- a/src/assets/styles/components/Loader.scss
+++ b/src/assets/styles/components/Loader.scss
@@ -2,7 +2,9 @@
   display: inline-block;
   width: 80px;
   height: 80px;
-  padding: 20% 50%;
+  margin: auto;
+  font-family: "Gotham Pro";
+  text-align: center;
 }
 
 .lds-dual-ring:after {
@@ -16,11 +18,12 @@
   border-color: #19746b transparent #19746b transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
-@keyframes lds-dual-ring {  
+
+@keyframes lds-dual-ring {
   0% {
     transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transform: rotate(700deg);
   }
 }
