--- a/src/assets/styles/components/CarCard.module.scss
+++ b/src/assets/styles/components/CarCard.module.scss
@@ -11,11 +11,11 @@
   background-color: #e5e5e1;
   list-style: none;
 
-  .car-image {
+  .car_image {
     width: 100%;
   }
 
-  .car-name {
+  .car_name {
     color: #333;
     font-family: inherit;
     font-size: 32px;
@@ -24,14 +24,14 @@
     margin-top: 20px;
   }
 
-  .car-struct-list {
+  .car_struct_list {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     margin-bottom: 19px;
     margin-top: 19px;
 
-    .car-struct-list-item {
+    .car_struct_list_item {
       display: flex;
       height: 43px;
       justify-content: space-between;
@@ -48,20 +48,20 @@
         margin-right: 15px;
       }
 
-      .car-struct-text {
+      .car_struct_text {
         margin-left: 15px;
         font-weight: 600;
       }
     }
   }
 
-  .car-info {
+  .car_info {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 20px;
 
-    .car-price {
+    .car_price {
       color: #19746b;
       font-family: inherit;
       font-size: 31px;
@@ -91,50 +91,56 @@
 }
 
 @media screen and (max-width: 768px) {
-  .carCardItem {
-    width: 460px;
-    border-radius: 12px;
-    margin-right: 20px;
-    padding: 20px;
 
-    .car-name {
-      font-size: 22px;
-      margin-top: 12px;
+  .carCardItem {
+    width: 45vw;
+    border-radius: 12px;
+    margin-right: 15px;
+    padding: 15px;
+
+    .car_name {
+      font-size: 18px;
+      margin-top: 10px;
     }
 
-    .car-struct-list {
+    .car_struct_list {
       width: 100%;
-      margin-bottom: 12px;
-      margin-top: 12px;
+      margin-bottom: 8px;
+      margin-top: 8px;
 
-      .car-struct-list-item {
-        height: 30px;
+      .car_struct_list_item {
+        height: 24px;
         padding: 5px 10px;
         color: #000;
-        font-size: 18px;
+        font-size: 14px;
         border-radius: 12px;
         margin-top: 6px;
 
-        &:not(:last-child) {
-          margin-right: 10px;
+        img{
+          width: 14px;
         }
 
-        .car-struct-text {
-          margin-left: 10px;
+        &:not(:last-child) {
+          margin-right: 8px;
+        }
+
+        .car_struct_text {
+          margin-left: 8px;
         }
       }
     }
 
-    .car-info {
-      margin-top: 15px;
+    .car_info {
+      margin-top: 10px;
 
-      .car-price {
-        font-size: 20px;
+      .car_price {
+        font-size: 18px;
       }
       .moreButton {
         height: 25px;
         padding: 5px 14px;
         gap: 8px;
+        border-radius: 3px;
         font-size: 14px;
       }
     }
@@ -143,22 +149,22 @@
 
 @media screen and (max-width: 500px) {
   .carCardItem {
-    width: 100%;
+    width: 93%;
     border-radius: 10px;
     margin-right: 10px;
     padding: 20px;
 
-    .car-name {
+    .car_name {
       font-size: 18px;
       margin-top: 12px;
     }
 
-    .car-struct-list {
+    .car_struct_list {
       width: 100%;
       margin-bottom: 12px;
       margin-top: 8px;
 
-      .car-struct-list-item {
+      .car_struct_list_item {
         height: 30px;
         padding: 5px 10px;
         color: #000;
@@ -169,37 +175,16 @@
         &:not(:last-child) {
           margin-right: 10px;
         }
-
-        img {
-          width: 14px;
-        }
-        .car-struct-text {
-          margin-left: 8px;
-        }
       }
     }
 
-    .car-info {
+    .car_info {
       margin-top: 12px;
-
-      .car-price {
-        font-size: 18px;
-      }
       .moreButton {
         height: 22px;
         padding: 5px 14px;
         gap: 8px;
         font-size: 14px;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 405px) {
-  .carCardItem {
-    .car-struct-list {
-      .car-struct-list-item {
-        font-size: 10px;
       }
     }
   }
