--- a/src/assets/styles/pages/Catalog/Catalog.module.scss
+++ b/src/assets/styles/pages/Catalog/Catalog.module.scss
@@ -5,7 +5,7 @@
 
 .title {
   font-family: Inter;
-  font-size: 44px;
+  font-size: 40px;
   font-weight: 600;
   text-align: center;
   margin-top: 80px;
@@ -15,16 +15,16 @@
   display: none;
 }
 
-.catalog-block {
+.catalog_block {
   margin-bottom: 80px;
   padding-left: 60px;
 }
 
-.adaptive-none {
+.adaptive_none {
   display: none;
 }
 
-.filtration-block {
+.filtration_block {
   display: flex;
   align-items: center;
   gap: 80px;
@@ -58,13 +58,13 @@
   transition: transform 0.3s ease;
 }
 
-.types-car {
+.types_car {
   display: flex;
   align-items: center;
   gap: 29px;
 }
 
-.country-car {
+.country_car {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -79,7 +79,7 @@
   font-weight: 600;
 }
 
-.volume-select {
+.volume_select {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -111,7 +111,7 @@
   }
 }
 
-.filter-modal {
+.filter_modal {
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -128,7 +128,7 @@
   }
 }
 
-.row-input {
+.row_input {
   display: flex;
   gap: 2.6vw;
 
@@ -185,7 +185,7 @@
   }
 }
 
-.selected-car {
+.selected_car {
   border: 1px solid rgb(0, 0, 0);
   background: rgb(204, 204, 204);
 }
@@ -193,10 +193,10 @@
 // -------  Adaptive   -------  //
 
 @media screen and (max-width: 990px) {
-  .filter-modal {
+  .filter_modal {
     padding: 40px;
   }
-  .volume-select {
+  .volume_select {
     padding: 2px;
     p {
       font-size: 12px;
@@ -205,7 +205,7 @@
 }
 
 @media screen and (max-width: 700px) {
-  .filter-modal {
+  .filter_modal {
     padding: 20px;
   }
 
@@ -217,36 +217,36 @@
     }
   }
 
-  .volume-select {
+  .volume_select {
     height: 35px;
     p {
       font-size: 10px;
     }
   }
 
-  .row-input {
+  .row_input {
     input {
       height: 35px;
       padding: 2px;
     }
   }
 
-  .catalog-block {
+  .catalog_block {
     padding-left: 0px;
   }
 
-  .country-car {
+  .country_car {
     font-size: 12px;
   }
 }
 
 @media screen and (max-width: 375px) {
-  .catalog-block {
+  .catalog_block {
     margin-bottom: 28px;
     padding-left: 0;
   }
 
-  .filter-modal {
+  .filter_modal {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -271,7 +271,7 @@
     }
   }
 
-  .volume-select {
+  .volume_select {
     width: 44vw;
     padding: 10px;
     p {
@@ -279,7 +279,7 @@
     }
   }
 
-  .row-input {
+  .row_input {
     input {
       width: 44vw;
       padding: 10px;
@@ -300,7 +300,7 @@
     }
   }
 
-  .country-car {
+  .country_car {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -312,18 +312,19 @@
     font-size: 10px;
   }
 
-  .filtration-block {
+  .filtration_block {
     display: flex;
     align-items: center;
     gap: 20px;
     margin-top: 54px;
   }
 
-  .types-car {
+  .types_car {
     gap: 12px;
   }
 
   .filtration {
+    gap: 5px;
     height: 35px;
     border-radius: 5px;
     padding: 8px;
@@ -340,7 +341,7 @@
     font-family: Montserrat;
   }
 
-  .main-title {
+  .main_title {
     display: flex;
     align-items: center;
     gap: 50px;
@@ -353,20 +354,21 @@
 
     p {
       font-size: 18px;
+      color: #000000;
     }
   }
 
-  .selected-car {
+  .selected_car {
     border: none;
     color: white;
     background-color: #19746b;
   }
 
-  .adaptive-none {
+  .adaptive_none {
     display: block;
   }
 
-  .adaptive-block {
+  .adaptive_block {
     display: none;
   }
 
