--- a/src/assets/styles/components/ModalWindow.module.scss
+++ b/src/assets/styles/components/ModalWindow.module.scss
@@ -1,3 +1,13 @@
+.darker {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 999; 
+}
+
 .modal {
   position: fixed;
   top: 150px;
@@ -6,8 +16,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(0,0,0,0.4);
-
 }
 
 .modalContent {
