--- a/src/assets/styles/components/ModalWindow.module.scss
+++ b/src/assets/styles/components/ModalWindow.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
-  z-index: 999; 
+  z-index: 999;
 }
 
 .modal {
@@ -16,7 +16,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  transition:  visibility 0.3s ease, transform 0.3s ease;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.modal.show {
+  opacity: 1;
 }
 
 .modalContent {
@@ -40,12 +45,4 @@
 .text {
   font-size: 2vw;
   text-align: center;
-}
-
-button {
-  border: none;
-  font-family: "Gotham Pro";
-  color: #000;
-  transition: all 0.2s;
-  font-size: 19px;
 }
