--- a/src/assets/styles/components/CarCard.module.scss
+++ b/src/assets/styles/components/CarCard.module.scss
@@ -146,54 +146,60 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 564px) {
   .carCardItem {
-    width: 93%;
-    border-radius: 10px;
-    margin-right: 10px;
-    padding: 20px;
+    width: 60vw;
+    padding: 15px;
+   
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .carCardItem {
+    width: 90%;
+    margin-right: 15px;
+    padding: 10px;
 
     .car_name {
-      font-size: 18px;
-      margin-top: 12px;
+      font-size: 14px;
+      margin-top: 5px;
     }
 
+  }
+}
+
+@media screen and (max-width: 351px) {
+  .carCardItem {
+
+    
     .car_struct_list {
-      width: 100%;
-      margin-bottom: 12px;
-      margin-top: 8px;
 
       .car_struct_list_item {
-        height: 30px;
-        padding: 5px 10px;
-        color: #000;
-        font-size: 14px;
-        border-radius: 12px;
-        margin-top: 6px;
+        padding: 2px 5px;
+        font-size: 12px;
+        margin-top: 3px;
 
         &:not(:last-child) {
-          margin-right: 10px;
+          margin-right: 4px;
         }
 
-        img {
-          width: 14px;
-        }
         .car_struct_text {
-          margin-left: 8px;
+          margin-left: 4px;
         }
       }
     }
+
     .car_info {
-      margin-top: 12px;
+      margin-top: 5px;
 
       .car_price {
-        font-size: 18px;
+        font-size: 14px;
       }
       .moreButton {
-        height: 22px;
-        padding: 5px 14px;
+        padding: 5px 7px;
         gap: 8px;
-        font-size: 14px;
+        border-radius: 3px;
+        font-size: 12px;
       }
     }
   }
