--- a/src/assets/styles/pages/Home/FirstBlock.module.scss
+++ b/src/assets/styles/pages/Home/FirstBlock.module.scss
@@ -68,6 +68,7 @@
     justify-content: center;
     background: none;
     padding-block: unset;
+    margin-top: 100px;
     img {
       display: none;
     }
