--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -5,6 +5,8 @@
   }
   
   .mob_nav{
+    position: fixed;
+    top: 0px;
     background-color: #fff;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding:15px;
@@ -54,5 +56,53 @@
     height: 2px;
   }
   
-  
-  
+.menu{
+  position: fixed;
+  display: flex;
+  justify-content: flex-end;
+  width: 100vw;
+  top: 60px;
+  z-index: 99;
+  right: 0;
+}
+
+
+
+.blur{
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(2px);
+  position: absolute;
+  visibility: hidden;
+}
+
+.menu_content{
+  transition: all 0.4s;
+  box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.25);
+  padding: 20px;
+  width: 50vw;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: #fff;
+  font-family: "Open Sans";
+  font-weight: bold;
+  z-index: 100;
+  transform: translateX(100%);
+  ul{
+    gap: 15px;
+    display: flex;
+    text-align: right;
+    flex-direction: column;
+    a{
+      color: #000;
+    }
+  }
+}
+
+.active{
+  transition: all 0.2s;
+  visibility: visible;
+  transform: translateX(0%);
+}
