--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -1,16 +1,14 @@
 header {
   padding: 2vh 5vw;
   padding-top: 3vh;
-  font-size: 1.2rem;
+  font-size: 1rem;
   background: #f4f4f0;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   width: 100%;
   z-index: 10;
   top: -200px;
   transition: all 0.3s ease;
-  @media screen and (max-width: 1024px) {
-    display: none;
-  }
+
 }
 
 .fixed {
@@ -45,6 +43,7 @@ header {
     .Links {
       margin-left: 30px;
       display: flex;
+      align-items: center;
       gap: 20px;
       button {
         font-size: inherit;
