--- a/src/assets/styles/pages/Catalog/Catalog.module.scss
+++ b/src/assets/styles/pages/Catalog/Catalog.module.scss
@@ -17,7 +17,6 @@
 
 .catalog_block {
   margin-bottom: 80px;
-  padding-left: 60px;
 }
 
 .adaptive_none {
@@ -26,25 +25,46 @@
 
 .filtration_block {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 80px;
   margin-top: 80px;
-}
 
-.filtration {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  .filtration {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-  width: 28vw;
-  height: 45px;
-  border-radius: 0.5rem;
-  background: rgb(255, 255, 255);
-  padding: 0 10px 0 21px;
+    width: 28vw;
+    height: 45px;
+    cursor: pointer;
+    border-radius: 0.5rem;
+    background: rgb(255, 255, 255);
+    padding: 0 10px 0 21px;
 
-  p {
-    font-family: Montserrat;
-    font-weight: 600;
+    p {
+      font-family: Montserrat;
+      font-weight: 600;
+    }
+  }
+
+  .filtration_open {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+
+    width: 28vw;
+    height: 45px;
+    border-radius: 0.5rem;
+    border: 1px solid black;
+    background: rgb(255, 255, 255);
+    padding: 0 10px 0 21px;
+
+    p {
+      font-family: Montserrat;
+      font-weight: 600;
+    }
   }
 }
 
@@ -69,28 +89,29 @@
   justify-content: center;
   align-items: center;
 
-  width: 12vw;
+  width: 15.1vw;
   height: 45px;
   border-radius: 12px;
   background: rgb(255, 255, 255);
   cursor: pointer;
 
   font-family: Inter;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .volume_select {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 
-  width: 9.1vw;
+  width: 9.7vw;
   height: 45px;
+  cursor: pointer;
   border-radius: 0.5rem;
   background: rgb(255, 255, 255);
-  padding: 0 10px 0 16px;
 
   p {
+    font-size: 13px;
     color: rgb(102, 102, 102);
     font-family: Montserrat;
   }
@@ -115,7 +136,6 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-
   border: 1px solid rgb(0, 0, 0);
   border-radius: 16px;
   background: rgb(196, 196, 196);
@@ -133,7 +153,7 @@
   gap: 2.6vw;
 
   input {
-    width: 9.1vw;
+    width: 9.7vw;
     height: 45px;
     border-radius: 0.5rem;
     background: rgb(255, 255, 255);
@@ -149,8 +169,8 @@
   gap: 2rem;
 
   button {
-    width: 21vw;
-    padding: 0.6rem 0 0.6rem 0;
+    width: 18.4vw;
+    height: 45px;
     border-radius: 10px;
     border: 2px solid #19746b;
     color: #fff;
@@ -173,8 +193,9 @@
   align-items: center;
   justify-content: space-between;
 
-  width: 21vw;
+  width: 22vw;
   height: 45px;
+  cursor: pointer;
   border-radius: 0.5rem;
   background: rgb(255, 255, 255);
   padding: 0 10px 0 16px;
@@ -186,64 +207,39 @@
 }
 
 .selected_car {
+  border-radius: 12px;
   border: 1px solid rgb(0, 0, 0);
-  background: rgb(204, 204, 204);
+  color: #fff;
+  background: rgb(45, 150, 149);
 }
 
 // -------  Adaptive   -------  //
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 1060px) {
   .filter_modal {
     padding: 40px;
   }
   .volume_select {
+    width: 11.2vw;
     padding: 2px;
-    p {
-      font-size: 12px;
-    }
   }
-}
-
-@media screen and (max-width: 700px) {
-  .filter_modal {
-    padding: 20px;
-  }
-
   .characteristic {
-    width: 21vw;
-    height: 35px;
-    p {
-      font-size: 10px;
-    }
-  }
-
-  .volume_select {
-    height: 35px;
-    p {
-      font-size: 10px;
-    }
+    width: 25vw;
   }
 
   .row_input {
     input {
-      height: 35px;
-      padding: 2px;
+      width: 11.2vw;
     }
-  }
-
-  .catalog_block {
-    padding-left: 0px;
-  }
-
-  .country_car {
-    font-size: 12px;
+    input::placeholder {
+      font-size: 11px;
+    }
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 768px) {
   .catalog_block {
     margin-bottom: 28px;
-    padding-left: 0;
   }
 
   .filter_modal {
@@ -271,11 +267,22 @@
     }
   }
 
-  .volume_select {
-    width: 44vw;
+  .volume_select_adaptive {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 43.7vw;
     padding: 10px;
+    height: 45px;
+    cursor: pointer;
+    border-radius: 0.5rem;
+    background: rgb(255, 255, 255);
+
     p {
       font-size: 13px;
+      color: rgb(102, 102, 102);
+      font-family: Montserrat;
     }
   }
 
@@ -287,16 +294,12 @@
   }
 
   .block {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 2rem;
-
     button {
       width: 50vw;
       font-size: 1.1rem;
       font-weight: 200;
       padding: 0.2rem 0 0.2rem 0;
+      margin-top: 14px;
     }
   }
 
@@ -306,32 +309,42 @@
     align-items: center;
     border: 1px solid rgb(204, 203, 203);
 
-    width: 4rem;
+    width: 12vw;
     height: 35px;
     border-radius: 5px;
     font-size: 10px;
+    font-weight: 400;
   }
 
   .filtration_block {
     display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-top: 54px;
+    justify-content: space-between;
+
+    .filtration {
+      gap: 5px;
+      height: 35px;
+      border-radius: 5px;
+      padding: 8px;
+      border: 1px solid rgb(204, 203, 203);
+      p {
+        font-size: 13px;
+      }
+    }
+
+    .filtration_open {
+      gap: 5px;
+      height: 35px;
+      border-radius: 5px;
+      padding: 8px;
+      border: 1px solid rgb(204, 203, 203);
+      p {
+        font-size: 13px;
+      }
+    }
   }
 
   .types_car {
     gap: 12px;
-  }
-
-  .filtration {
-    gap: 5px;
-    height: 35px;
-    border-radius: 5px;
-    padding: 8px;
-    border: 1px solid rgb(204, 203, 203);
-    p {
-      font-size: 13px;
-    }
   }
 
   .title {
