--- a/src/assets/styles/globalStyles.scss
+++ b/src/assets/styles/globalStyles.scss
@@ -44,7 +44,7 @@ ul {
 
 @font-face {
   font-family: "Gotham Pro";
-  src: url("GothamPro.eot");
+  src: url("../fonts/GothamPro.eot");
   src:
     url("../fonts/GothamPro.eot?#iefix") format("embedded-opentype"),
     url("../fonts/GothamPro.woff2") format("woff2"),
