connect backend, fix some bugs

--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -82,6 +82,7 @@
   font-weight: bold;
   z-index: 100;
   transform: translateX(100%);
+  border-bottom-left-radius: 30px;
   ul {
     gap: 15px;
     display: flex;
