--- a/src/assets/styles/layout/Header.module.scss
+++ b/src/assets/styles/layout/Header.module.scss
@@ -26,6 +26,7 @@ header {
     display: flex;
     align-items: center;
     .searchIco_div {
+      cursor: pointer;
       border-radius: 10px;
       display: flex;
       align-items: center;
