--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -124,21 +124,21 @@
       padding: 40px 0;
       margin: 40px auto;
     }
-    .backToPrevious {
-      margin-top: 30px;
-      width: 18vw;
-      display: flex;
-      font-size: 3vw;
-      letter-spacing: 1px;
-      align-items: center;
-      margin-left: 5%;
-
-      span {
-        margin-left: 5px;
-      }
-
-      &:hover {
-        cursor: pointer;
+    a {
+      color: #000;
+      .backToPrevious {
+        width: 18vw;
+        display: flex;
+        align-items: center;
+        font-size: 3vw;
+        letter-spacing: 1px;
+        margin-left: 5%;
+        span {
+          margin-left: 5px;
+        }
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
   }
