--- a/src/assets/styles/components/ModalCalculator.module.scss
+++ b/src/assets/styles/components/ModalCalculator.module.scss
@@ -6,11 +6,13 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
   z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal {
   position: fixed;
-  top: 150px;
   left: 0;
   width: 100%;
   display: flex;
