--- a/src/assets/styles/components/ModalCalculator.module.scss
+++ b/src/assets/styles/components/ModalCalculator.module.scss
@@ -12,9 +12,8 @@
 }
 
 .modal {
-  position: fixed;
-  left: 0;
-  width: 100%;
+  top: 25%;
+  left: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
