--- a/src/assets/styles/pages/Home/Catalogs.module.scss
+++ b/src/assets/styles/pages/Home/Catalogs.module.scss
@@ -29,11 +29,10 @@
 .catalog_type_title {
   color: #000;
   font-family: "Inter";
-  font-size: 42px;
-  font-style: normal;
-  font-weight: 500;
+  font-size: 2rem;
+  font-weight: 600;
   line-height: normal;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .car_card_list {
@@ -63,8 +62,8 @@
   }
 
   .catalog_type_title {
-    font-size: 35px;
-    margin-bottom: 40px;
+    font-size: 1.6rem;
+    margin-bottom: 20px;
   }
 }
 
@@ -92,7 +91,7 @@
   }
 
   .catalog_type_title {
-    font-size: 25px;
+    font-size: 1.5rem;
     margin-bottom: 20px;
   }
 }
