--- a/src/assets/styles/components/ModalCalculator.module.scss
+++ b/src/assets/styles/components/ModalCalculator.module.scss
@@ -6,13 +6,14 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
   z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal {
-  position: fixed;
-  top: 150px;
-  left: 0;
-  width: 100%;
+  top: 25%;
+  left: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,23 +21,87 @@
 
 .modalContent {
   background-color: #fff;
-  padding: 200px;
-  border-radius: 20px;
+  padding: 6.25em; 
+  border-radius: 1.25rem; 
+  display: flex;
+  width: 50vw;
+  height: 80vh;
 }
 
 .close {
-  border: none;
-  font-size: 3rem;
-  font-size: 1.5vw;
-  width: 19vw;
+  border: 0.1875rem solid #19746b; 
+  border-radius: 0.625rem;
+  background: #19746b;
+  color: #fff;
+  font-family: 'Montserrat';
+  font-size: 1.2vw;
   padding: 0.4em;
-  border: 3px solid #19746b;
-  color: #19746b;
-  border-radius: 10px;
-  margin-top: 40px;
+  width: 15vw;
+  margin-top: 40vh; 
+  margin-left: -9.375rem; 
 }
 
 .text {
   font-size: 2vw;
   text-align: center;
+}
+
+.engineSelect {
+  background: #fff;
+  border: 0.0625rem solid #a4a4a4; 
+  border-radius: 0.25rem;
+  color: #000;
+  font-family: 'Montserrat';
+  font-size: 0.9375rem; 
+  height: 6vh; 
+  margin-left: 1.875rem; 
+  padding-left: 0.625em; 
+  width: 16.5vw;
+}
+
+.input__box,
+.input__box2,
+.input__box3,
+.input__box4 {
+  display: flex;
+  flex-direction: column;
+  gap: 1.875rem; 
+  position: relative;
+}
+
+.name__input {
+  background: #fff;
+  border: 0.0625rem solid #a4a4a4;
+  border-radius: 0.25rem; 
+  color: #000;
+  font-family: 'Montserrat';
+  font-size: 1.25rem; 
+  height: 3.125rem; 
+  margin-left: 0.625rem;
+  padding: 0.625em; 
+  width: 16.5vw; 
+}
+
+.name__input_label {
+  background: #fff;
+  color: #a4a4a4;
+  left: 1.25rem; 
+  padding: 0 0.3125rem; 
+  position: absolute;
+  top: -0.625rem; 
+}
+
+.input__type {
+  margin-left: 1.25rem;
+}
+
+.petrol,
+.diesel,
+.hybrid,
+.electric {
+  color: #000;
+  font-family: 'Montserrat';
+  font-size: 1.25rem;
+  margin-top: 1.25rem; 
+  padding-left: 3.125vw; 
 }
