--- a/src/assets/styles/components/ModalCalculator.module.scss
+++ b/src/assets/styles/components/ModalCalculator.module.scss
@@ -9,104 +9,169 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+  .modal {
+    top: 25%;
+    left: 30%;
+    top: 25%;
+    left: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .modalContent {
+      background-color: #fff;
+      padding: 6.25em;
+      border-radius: 1.25rem;
+      display: flex;
+      width: 50vw;
+      height: 80vh;
+    }
+
+    .close {
+      position: absolute;
+      top: 70%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border: 0.1875rem solid #19746b;
+      border-radius: 0.625rem;
+      background: #19746b;
+      color: #fff;
+      font-family: 'Montserrat';
+      font-size: 1.2vw;
+      padding: 0.4em;
+      width: 15vw;
+    }
+
+    .text {
+      font-size: 2vw;
+      text-align: center;
+    }
+
+    .engineSelect {
+      background: #fff;
+      border: 0.0625rem solid #a4a4a4;
+      border-radius: 0.25rem;
+      color: #000;
+      font-family: 'Montserrat';
+      font-size: 0.9375rem;
+      height: 6vh;
+      margin-left: 1.875rem;
+      padding-left: 0.625em;
+      width: 16.5vw;
+    }
+
+    .input__box,
+    .input__box2,
+    .input__box3,
+    .input__box4 {
+      display: flex;
+      flex-direction: column;
+      gap: 1.875rem;
+      position: relative;
+    }
+
+    .name__input {
+      background: #fff;
+      border: 0.0625rem solid #a4a4a4;
+      border-radius: 0.25rem;
+      color: #000;
+      font-family: 'Montserrat';
+      font-size: 1.25rem;
+      height: 3.125rem;
+      margin-left: 0.625rem;
+      padding: 0.625em;
+      width: 16.5vw;
+    }
+
+    .name__input_label {
+      background: #fff;
+      color: #a4a4a4;
+      left: 1.25rem;
+      padding: 0 0.3125rem;
+      position: absolute;
+      top: -0.625rem;
+    }
+
+    .input__type {
+      margin-left: 1.25rem;
+    }
+
+    .custom_select {
+      position: relative;
+      width: 290px;
+      margin-left: 50px;
+
+      .custom_select_selected {
+        width: 290px;
+        height: 50px;
+        background: #fff;
+        border: 1px solid #a4a4a4;
+        border-radius: 4px;
+        color: #000000;
+        cursor: pointer;
+        font-family: 'Montserrat';
+        font-size: 15px;
+        padding-left: 10px;
+        display: flex;
+        align-items: center;
+
+        .arrow {
+          width: 10px;
+          height: 5px;
+          margin-left: 65px;
+          color: #000000;
+        }
+      }
+
+      .custom_select_options {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        top: 50px;
+        border: 1px solid#D2D2D2;
+        border-radius: 4px;
+        background: #fff;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        z-index: 1000;
+        list-style: none;
+        padding: 0;
+        color: #A4A4A4;
+
+        .custom_select_option {
+          padding: 10px;
+          cursor: pointer;
+          border: 1px solid #D2D2D2;
+          height: 50px;
+
+          &:hover {
+            background: #f2f2f2;
+          }
+        }
+      }
+    }
+  }
+}
+.custom_select_option {
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid #D2D2D2;
+  height: 50px;
 }
 
-.modal {
-  top: 25%;
-  left: 30%;
-  top: 25%;
-  left: 30%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.custom_select_option:hover {
+  background: #f2f2f2;
 }
 
-.modalContent {
-  background-color: #fff;
-  padding: 6.25em; 
-  border-radius: 1.25rem; 
-  display: flex;
-  width: 50vw;
-  height: 80vh;
+.selected {
+  color: black;
 }
 
-.close {
-  border: 0.1875rem solid #19746b; 
-  border-radius: 0.625rem;
-  background: #19746b;
-  color: #fff;
-  font-family: 'Montserrat';
-  font-size: 1.2vw;
-  padding: 0.4em;
-  width: 15vw;
-  margin-top: 40vh; 
-  margin-left: -9.375rem; 
-}
-
-.text {
-  font-size: 2vw;
-  text-align: center;
-}
-
-.engineSelect {
-  background: #fff;
-  border: 0.0625rem solid #a4a4a4; 
-  border-radius: 0.25rem;
-  color: #000;
-  font-family: 'Montserrat';
-  font-size: 0.9375rem; 
-  height: 6vh; 
-  margin-left: 1.875rem; 
-  padding-left: 0.625em; 
-  width: 16.5vw;
-}
-
-.input__box,
-.input__box2,
-.input__box3,
-.input__box4 {
-  display: flex;
-  flex-direction: column;
-  gap: 1.875rem; 
+.arrow{
   position: relative;
+  bottom: 35px;
+  margin-left: 260px;
 }
-
-.name__input {
-  background: #fff;
-  border: 0.0625rem solid #a4a4a4;
-  border-radius: 0.25rem; 
-  color: #000;
-  font-family: 'Montserrat';
-  font-size: 1.25rem; 
-  height: 3.125rem; 
-  margin-left: 0.625rem;
-  padding: 0.625em; 
-  width: 16.5vw; 
-}
-
-.name__input_label {
-  background: #fff;
-  color: #a4a4a4;
-  left: 1.25rem; 
-  padding: 0 0.3125rem; 
-  position: absolute;
-  top: -0.625rem; 
-}
-
-.input__type {
-  margin-left: 1.25rem;
-}
-
-.petrol,
-.diesel,
-.hybrid,
-.electric {
-  color: #000;
-  font-family: 'Montserrat';
-  font-size: 1.25rem;
-  margin-top: 1.25rem; 
-  padding-left: 3.125vw; 
+.rotated{
+  transform: rotate(180deg);
 }
