--- a/src/assets/styles/components/ModalCalculator.module.scss
+++ b/src/assets/styles/components/ModalCalculator.module.scss
@@ -72,6 +72,7 @@
   flex-direction: column;
   gap: 1.875rem;
   position: relative;
+  margin-right: 30px;
 }
 
 .name__input {
@@ -91,7 +92,6 @@
   background: #fff;
   color: #a4a4a4;
   left: 1.25rem;
-  padding: 0 0.3125rem;
   position: absolute;
   top: -0.625rem;
 }
