--- a/src/assets/styles/components/ModalCalculator.module.scss
+++ b/src/assets/styles/components/ModalCalculator.module.scss
@@ -18,22 +18,23 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 60vw;
+  width: 50vw;
   height: 80vh;
-  padding: 6.25em;
+  padding: 6.25vw;
 }
 .modalContent {
   background-color: #fff;
-  padding: 6.25em;
+  padding: 5%;
   border-radius: 1.25rem;
   display: flex;
-  width: 50vw;
+  width: 100%;
   height: 80vh;
-      }
+}
+
 
 .close {
   position: absolute;
-  top: 80%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   border: 0.1875rem solid #19746b;
@@ -42,7 +43,7 @@
   color: #fff;
   font-family: 'Montserrat';
   font-size: 1.2vw;
-  padding: 0.4em;
+  padding: 1vw;
   width: 15vw;
 }
 
@@ -60,7 +61,7 @@
   font-size: 0.9375rem;
   height: 6vh;
   margin-left: 1.875rem;
-  padding-left: 0.625em;
+  padding-left: 1.5vw;
   width: 16.5vw;
 }
 
@@ -83,9 +84,9 @@
   font-family: 'Montserrat';
   font-size: 1.25rem;
   height: 3.125rem;
-  margin-left: 0.625rem;
-  padding: 0.625em;
-  width: 16.5vw;
+  margin-left: 2%;
+  padding: 1.5%;
+  width: 290px;
 }
 
 .name__input_label {
