fix: styles, font errors. add: env file

--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -91,6 +91,13 @@
     a {
       color: #000;
     }
+    button{
+      border: none;
+      font-size: inherit;
+      font-weight: inherit;
+      font-family: inherit;
+      background-color: #fff;
+    }
   }
 }
 
