--- a/src/assets/styles/pages/Home/Catalogs.module.scss
+++ b/src/assets/styles/pages/Home/Catalogs.module.scss
@@ -1,4 +1,3 @@
-
 .catalogs {
   width: 90%;
   margin: 0 auto;
@@ -12,6 +11,7 @@
 
     .next_button {
       width: 288px;
+      height: 100%;
       flex-shrink: 0;
       border-radius: 15px;
       background: #fff;
@@ -39,6 +39,17 @@
   box-sizing: border-box;
   display: flex;
   overflow-x: scroll;
+
+  // .swiper-slide {
+  //   width: 274px;
+  // }
+  // .swiper{
+  //   .swiper-wrapper{
+  //     .swiper-slide.swiper-slide{
+  //       width: 274px;
+  //     }
+  //   }
+  // }
 }
 
 .car_card_list::-webkit-scrollbar {
@@ -102,6 +113,3 @@
     margin-bottom: 20px;
   }
 }
-
-
-
