--- a/src/assets/styles/components/ModalCalculator.module.scss
+++ b/src/assets/styles/components/ModalCalculator.module.scss
@@ -267,7 +267,6 @@
     margin-left: 2px;
   }
 }
-
 @media screen and (max-width: 320px) {
   .modal {
     width: 90%;
@@ -285,5 +284,8 @@
     width: 290px;
     margin-top: 30px;
     margin-left: 2px;
+  }
+  .text{
+    width: 240px;
   }
 }
