--- a/src/assets/styles/components/ShowCalculator.module.scss
+++ b/src/assets/styles/components/ShowCalculator.module.scss
@@ -1,36 +1,38 @@
 .pricingCalculator {
   width: 1000px;
-  height: 650px;
+  height: 600px;
   background-color: #FFFFFF;
   border-radius: 30px;
   padding-top: 50px;
+  font-family: "Montserrat";
 }
-.calculation{
+.summa1,.summa2,.summa3,.summa4,.summa5,.summa6{
+  display: flex;
+  gap: 8px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.calculation, .calculations {
   width: 280px;
   height: 50px;
   border: 1px solid #D2D2D2;
   display: flex;
-  padding-top: 10px;
-  padding-left: 10px;
-  margin-top: 15px;
+  align-items: center;
   border-radius: 6px;
+  padding-left: 10px;
+  gap: 10px;
+  margin-bottom: 10px;
+  font-family: "Montserrat";
 }
 .calculations{
   background-color: #E7E7E7;
-  width: 280px;
-  height: 50px;
-  border: 1px solid #D2D2D2;
-  display: flex;
-  padding-top: 10px;
-  padding-left: 10px;
-  border-radius: 6px;
+  font-family: "Montserrat";
 }
 .calculation1,.calculation2,.calculation3,.calculation4,.calculation5,.calculation6{
   display: flex;
   text-align: center;
   justify-content: center;
   font-size: 18px;
-  gap: 10px;
 }
 .text{
   width: 800px;
@@ -38,18 +40,20 @@
   margin-left: 100px;
   color: #FF0000;
   font-family: "Montserrat";
-  margin-top: 50px;
+  margin-top: 20px;
 }
 .button {
   width: 270px;
   height: 50px;
+  border: none;
   border-radius: 10px;
   color: #FFFFFF;
   font-size: 25px;
   background-color: #19746B;
   float: right;
   margin-right: 150px;
-  margin-top: 40px;
+  margin-top: 20px;
+  font-family: "Montserrat";
 }
 @media (max-width: 1024px) {
   .pricingCalculator {
@@ -138,15 +142,13 @@
 @media (max-width: 768px) {
   .pricingCalculator {
     width: 100%; 
-    height: 700px;
+    height: 600px;
     margin: 0 auto;
     display: flex;
     flex-direction: column; 
     justify-content: center; 
     align-items: center; 
     text-align: center; 
-    padding-left: 10px;
-    padding-right: 10px;
   }
 
   .calculation,
@@ -156,8 +158,6 @@
     text-align: center; 
     justify-content: center;
     font-size: 12px;
-    padding-top: 10px;
-    margin-top: 8px;
   }
 
   .text {
@@ -180,7 +180,7 @@
     background-color: #19746B; 
     display: block; 
     margin: 0 auto; 
-    margin-top: 30px;
+    margin-top: 20px;
   }
 }
 
@@ -194,22 +194,20 @@
     justify-content: center; 
     align-items: center; 
     text-align: center; 
-    padding-left: 10px;
-    padding-right: 10px;
   }
 
   .calculation,
   .calculations {
     width: 100px;
-    text-align: center; 
     justify-content: center;
-    font-size: 8px;
-    margin-top: 8px;
+    font-size: 10px;
+    text-align: center;
+    padding-right: 10px;
   }
 
   .text {
     width: 300px;
-    font-size: 10px;
+    font-size: 12px;
     margin-left: 0;
     color: #FF0000;
     font-family: "Montserrat";
